Se refactorizo AuthController
