# storage/api-docs/api-docs.json
@@ -1940,49 +1940,6 @@
                 ]
             }
         },
-        "/auth/email/verify": {
-            "get": {
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Check if the account is verified",
-                "operationId": "verify-email",
-                "responses": {
-                    "200": {
-                        "description": "Ok",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Please verify your email address."
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Unauthenticated"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/auth/email/verify/{id}/{hash}": {
             "get": {
                 "tags": [
